--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 
-  <article class="card" aria-labelledby="card-title">
+  <article role="article" class="card" aria-labelledby="card-title">
     <img class="card-image" src="./assets/images/illustration-article.svg" alt="Lorem ipsum dolor sit amet, consectetur adipiscing elit.">
     <section class="card-info">
       <a class="card-tag" href="#">
@@ -22,15 +22,15 @@
       </a>
       <p class="card-description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
     </section>
-    <footer class="user-info" aria-labelledby="user-name">
+    <footer class="user-info" aria-labelledby="user-info">
       <img class="user-image" src="./assets/images/image-avatar.webp" alt="Portrait of Greg Hooper">
       <a href="#">
-        <h4 class="user-name">Greg Hooper</h4>
+        <h3 class="user-name">Greg Hooper</h3>
       </a>
     </footer>
   </article>
   
-  <div class="attribution">
+  <div class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/kevcb1988" target="_blank" rel="noopener">Keven CB</a>.
   </div>
